docs: add advanced search filters

--- a/src/docs/shared/release-notes/5.38.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.0/changelog.mdx
@@ -13,6 +13,7 @@ import nestedFields from "./assets/nested-fields.png";
 import lexicalFlat from "./assets/lexical-flat.png";
 import lexicalCustomTransform from "./assets/lexical-custom-transform.png";
 import lexicalToHtml from "./assets/lexical-to-html.png";
+import advancedSearchFilters from "./assets/advanced-search-filters.png";
 
 <GithubRelease version={"5.38.0"} />
 
@@ -53,6 +54,29 @@ We now support nesting of any field, at any depth, without any **structural** li
 However, there are still limitations on filtering: _you cannot filter content entries based on the fields within the dynamic zone templates_.
 
 Still, this unlocks near limitless data modeling, and can be an indispensable tool when combined with a site generator like Gatsby or Next.js, where your entire dynamic zone templates can be mapped to React components designed to render your content.
+
+### Introducing Advanced Search Filter Builder ([#3604](https://github.com/webiny/webiny-js/pull/3604))
+
+With this release, we are introducing our Advanced Search Filter Builder, specifically designed to improve the search functionality of our Headless CMS application.
+
+With this new feature, users can now easily create complex search queries without requiring the assistance of a developer. The Advanced Search Filter Builder supports grouping conditions and defining the relationship between individual conditions or groups, making it a powerful tool for improving search accuracy and efficiency.
+
+Users can create custom search queries based on model-defined fields that are categorized as one of the following data types: 
+
+- `boolean`
+- `datetime`
+- `number`
+- `text`
+
+Additionally, the filter includes default fields such as `status`, `createdOn`, and `savedOn`, besides the model-defined ones.
+
+While this release covers specific field types, we are committed to ongoing development and will expand this functionality to cover more field types, making the search experience even better.
+
+In addition to creating complex search queries, users can save and manage their search filters, making it easier to access and reuse them in the future.
+
+This feature promises to simplify user interaction with entries, streamline workflows, and optimise content management within the application.
+
+<Image src={advancedSearchFilters} alt={"Headless CMS Advanced Search Filter Builder"} />
 
 ### ✍️ Audit Logs
 
