docs: add bulk actions

--- a/src/docs/shared/release-notes/5.38.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.0/changelog.mdx
@@ -14,6 +14,9 @@ import lexicalFlat from "./assets/lexical-flat.png";
 import lexicalCustomTransform from "./assets/lexical-custom-transform.png";
 import lexicalToHtml from "./assets/lexical-to-html.png";
 import advancedSearchFilters from "./assets/advanced-search-filters.png";
+import bulkActionsHcms from "./assets/bulk-actions-hcms.png"
+import bulkActionsPb from "./assets/bulk-actions-pb.png"
+import bulkActionsFm from "./assets/bulk-actions-fm.png"
 
 <GithubRelease version={"5.38.0"} />
 
@@ -61,18 +64,18 @@ With this release, we are introducing our Advanced Search Filter Builder, specif
 
 With this new feature, users can now easily create complex search queries without requiring the assistance of a developer. The Advanced Search Filter Builder supports grouping conditions and defining the relationship between individual conditions or groups, making it a powerful tool for improving search accuracy and efficiency.
 
-Users can create custom search queries based on model-defined fields that are categorized as one of the following data types: 
+Users can create custom search queries based on model-defined fields that are one of the following types: 
 
 - `boolean`
 - `datetime`
 - `number`
 - `text`
 
-Additionally, the filter includes default fields such as `status`, `createdOn`, and `savedOn`, besides the model-defined ones.
-
 While this release covers specific field types, we are committed to ongoing development and will expand this functionality to cover more field types, making the search experience even better.
 
-In addition to creating complex search queries, users can save and manage their search filters, making it easier to access and reuse them in the future.
+Additionally, the filter includes default fields such as `status`, `createdOn`, and `savedOn`, besides the model-defined ones.
+
+Moreover, users can save and manage their search filters, making it easier to access and reuse them in the future.
 
 This feature promises to simplify user interaction with entries, streamline workflows, and optimise content management within the application.
 
@@ -121,6 +124,31 @@ Upon creating a new Webiny project, users will no longer be able to select the D
 Note that all existing projects that are using the Amazon DynamoDB + Amazon Elasticsearch database setup will continue to work as before. Users' projects will still be able to use the Amazon Elasticsearch service, and they will not be forced to migrate to Amazon OpenSearch.
 
 Note that, at the moment, we do not provide a migration path from Amazon Elasticsearch to Amazon OpenSearch for existing projects. Drop us a message in our [Community Slack](https://www.webiny.com/slack) if this is something you'd like to see in the future.
+
+## Bulk actions
+
+### Introducing Bulk Actions for Headless CMS, Page Builder and File Manager ([#3501](https://github.com/webiny/webiny-js/pull/3501) [#3530](https://github.com/webiny/webiny-js/pull/3530) [#3608](https://github.com/webiny/webiny-js/pull/3608))
+
+In this release, we are introducing Bulk Actions to our main applications. With this feature, users can now select multiple entries at once and perform various actions on the entire selection.
+
+Customisation is another integral part of this feature. Developers can tailor the default actions to meet specific needs, and a comprehensive guide is available to help them refine the functionalities according to user feedback and demands.
+
+This enhancement promises to redefine user interaction with entries, making routine operations easier and providing greater control to content editors.
+
+<Gallery>
+  <Image
+    src={bulkActionsHcms}
+    alt={`Bulk Actions for Headless CMS`}
+  />
+  <Image
+    src={bulkActionsPb}
+    alt={`Bulk Actions for Page Builder`}
+  />
+  <Image
+    src={bulkActionsFm}
+    alt={`Bulk Actions for File Manager`}
+  />
+</Gallery>
 
 ## Lexical Tooling
 
