docs: added the Pre-Built Visual Blocks section in 5.38.0changelog

--- a/src/docs/shared/release-notes/5.38.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.0/changelog.mdx
@@ -17,6 +17,7 @@ import advancedSearchFilters from "./assets/advanced-search-filters.png";
 import bulkActionsHcms from "./assets/bulk-actions-hcms.png"
 import bulkActionsPb from "./assets/bulk-actions-pb.png"
 import bulkActionsFm from "./assets/bulk-actions-fm.png"
+import preDefinedBlocks from "./assets/pre-defined-blocks.png"
 
 <GithubRelease version={"5.38.0"} />
 
@@ -86,6 +87,13 @@ This feature promises to simplify user interaction with entries, streamline work
 ✍️
 
 ## Page Builder
+
+### Over 100+ pre-built visual blocks for Webiny Page Builder
+We are exicited to launch a free library of over 100+ professionally designed, fully responsive page builder blocks that you can use in your Webiny Page Builder. These new pre-built visual blocks will empower you to effortlessly create stunning pages in no time. To get started with these new blocks, please visit [blocks.webiny.com](https://blocks.webiny.com). For more details, you can refer to the full announcement [here](https://www.webiny.com/blog/pre-built-visual-blocks-for-webiny-page-builder).
+
+<ExternalLink href={`https://blocks.webiny.com/`} icon={false}>
+    <Image src={preDefinedBlocks} alt={"Pre-Built Visual Blocks for Webiny Page Builder"} />
+</ExternalLink>
 
 ### Improved Previewing of Blocks ([#3329](https://github.com/webiny/webiny-js/pull/3329))
 
