fix: remove OpenSearch item

--- a/src/docs/shared/release-notes/5.38.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.0/changelog.mdx
@@ -67,17 +67,22 @@ In terms of manual steps, note that you will still need to update your form layo
 
 For more information, please refer to the newly added [Multi-Step Forms](/docs/key-topics/form-builder/multi-step-forms) article.
 
-## Deployments
+[//]: # (## Deployments)
 
-### Introducing Support for Amazon OpenSearch ([#3612](https://github.com/webiny/webiny-js/pull/3612))
+[//]: # ()
+[//]: # (### Introducing Support for Amazon OpenSearch &#40;[#3612]&#40;https://github.com/webiny/webiny-js/pull/3612&#41;&#41;)
 
-With this release, we're introducing support for [Amazon OpenSearch](https://aws.amazon.com/opensearch-service/), a managed service that replaces the popular [Amazon Elasticsearch Service](https://aws.amazon.com/elasticsearch-service/).
+[//]: # ()
+[//]: # (With this release, we're introducing support for [Amazon OpenSearch]&#40;https://aws.amazon.com/opensearch-service/&#41;, a managed service that replaces the popular [Amazon Elasticsearch Service]&#40;https://aws.amazon.com/elasticsearch-service/&#41;.)
 
-Upon creating a new Webiny project, users will no longer be able to select the DynamoDB + Elasticsearch database setup. Instead, they will be able to select the DynamoDB + OpenSearch setup.
+[//]: # ()
+[//]: # (Upon creating a new Webiny project, users will no longer be able to select the DynamoDB + Elasticsearch database setup. Instead, they will be able to select the DynamoDB + OpenSearch setup.)
 
-Note that all existing projects that are using the Amazon DynamoDB + Amazon Elasticsearch database setup will continue to work as before. Users' projects will still be able to use the Amazon Elasticsearch service, and they will not be forced to migrate to Amazon OpenSearch.
+[//]: # ()
+[//]: # (Note that all existing projects that are using the Amazon DynamoDB + Amazon Elasticsearch database setup will continue to work as before. Users' projects will still be able to use the Amazon Elasticsearch service, and they will not be forced to migrate to Amazon OpenSearch.)
 
-Note that, at the moment, we do not provide a migration path from Amazon Elasticsearch to Amazon OpenSearch for existing projects. Drop us a message in our [Community Slack](https://www.webiny.com/slack) if this is something you'd like to see in the future.
+[//]: # ()
+[//]: # (Note that, at the moment, we do not provide a migration path from Amazon Elasticsearch to Amazon OpenSearch for existing projects. Drop us a message in our [Community Slack]&#40;https://www.webiny.com/slack&#41; if this is something you'd like to see in the future.)
 
 ## Development
 
