feat: add `WEBINY_ELASTICSEARCH_INDEX_LOCALE` notes

--- a/src/docs/shared/release-notes/5.38.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.0/changelog.mdx
@@ -21,6 +21,16 @@ import preDefinedBlocks from "./assets/pre-defined-blocks.png"
 
 <GithubRelease version={"5.38.0"} />
 
+## Breaking Changes
+
+### Removal of `WEBINY_ELASTICSEARCH_INDEX_LOCALE` Environment Variable ([#3672](https://github.com/webiny/webiny-js/pull/3672))
+
+Used only with [Amazon DynamoDB + Amazon ElasticSearch](http://docs:8000/docs/architecture/introduction#different-database-setups) database setup, the `WEBINY_ELASTICSEARCH_INDEX_LOCALE` environment variable would allow users to choose whether they want their ElasticSearch indexes to include a locale code in their names. 
+
+Today, there is really no reason to not set this to `true`, so we've decided to hide this environment variable altogether, and always include the locale code in the index name.
+
+We're aware that this might cause some issues for existing projects, so we've added [a couple of notes](/docs/release-notes/5.38.0/upgrade-guide#3-webiny-elasticsearch-index-locale-environment-variable) in the migration guide to help you with the migration process.
+
 ## Security
 
 ### Advanced Access Control Layer (AACL) - Folder Level Permissions ([#3610](https://github.com/webiny/webiny-js/pull/3610))
