feat: add multi-step forms upgrade notes

--- a/src/docs/shared/release-notes/5.38.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.0/changelog.mdx
@@ -127,9 +127,7 @@ As the name suggests, multi-step forms allow users to break down long forms into
 
 In terms of backward compatibility, note that, upon redeploying your Webiny project, a data migration will be triggered, which will automatically convert all existing forms into multi-step forms. In essence, in this process, all form fields from existing forms will be moved into the first step of the form.
 
-In terms of manual steps, note that you will still need to update your form layout React components, which will partially be handled by the project upgrade script that's included in this release.
-
-For more information, please refer to the newly added [Multi-Step Forms](/docs/key-topics/form-builder/multi-step-forms) article.
+In terms of manual steps, note that you will still need to update a couple of form layout React components, which will partially be handled by the project upgrade script that's included in this release. For more information, please refer to the [Upgrade Guide](/docs/release-notes/5.38.0/upgrade-guide#3-form-builder-multi-step-forms).
 
 [//]: # (## Deployments)
 
