--- a/src/docs/shared/release-notes/5.38.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.38.0/upgrade-guide.mdx
@@ -39,9 +39,35 @@ The next step is to run the project upgrade:
 yarn webiny upgrade
 ```
 
-#### Inspect tHE fb CHANGES
+### 3. Form Builder - Multi-Step Forms
 
-### 3. `WEBINY_ELASTICSEARCH_INDEX_LOCALE` Environment Variable
+<Alert type={"info"}>
+
+  In case you don't use Form Builder or didn't perform any customizations to the default form layout React code located in `apps/theme/layouts/forms` folder, you can simply delete the generated `apps/theme/layouts/_forms_backup` folder that the `webiny upgrade` command generates and proceed with the next step. Otherwise, please read on.
+
+</Alert>
+
+With the introduction of [multi-step forms](/docs/release-notes/5.38.0/changelog#multi-step-forms), forms created with the Form Builder app can now span across multiple pages.
+
+In terms of existing data in the database, upon upgrading and deploying your Webiny project, all existing forms and form submissions will be automatically converted to multi-step forms (that consist of a single step).
+
+But, before deploying, a couple of manual steps need to be performed in your form layouts-related React code. The above `webiny upgrade` command will partially assist with that. 
+
+The command will first make a backup of your existing `apps/theme/layouts/forms` folder will be created (in `apps/theme/layouts/_forms_backup`). This will ensure no code is lost in the process. Second, it will generate a new `apps/theme/layouts/forms` folder, which contains the latest React code. More specifically, it contains the latest default form layout React code, which supports multi-step forms.
+
+With both the old and new code available, you can now proceed by comparing the old and new code, and apply any changes you might have made to the old code to the new code. If you have multiple form layouts, you'll need to repeat this process for each of them. Once you're done, you can delete the old `apps/theme/layouts/_forms_backup` folder.
+
+#### Things to Watch Out For
+
+When comparing the 5.37.0 and 5.38.0 default form layout React code, there are two differences.
+
+The [`apps/theme/layouts/forms/DefaultFormLayout.tsx`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/common/apps/theme/layouts/forms/DefaultFormLayout.tsx) file is where the most of the changes were made. The code now uses the newly available properties like `goToNextStep`, `goToPreviousStep`, `isLastStep`, `isFirstStep` and others to control the form flow.
+
+The code also imports the new `Button` component from the [`apps/theme/layouts/forms/DefaultFormLayout/buttons/Button.tsx`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/common/apps/theme/layouts/forms/DefaultFormLayout/buttons/Button.tsx) file, which is another difference between the two versions. This is a new component that did not exist in the 5.37.0 version. It is used to render the buttons for moving between form steps and also for submitting the form.
+
+With these two, the rest of the code is the same, so you can simply copy over any changes you might have made to the old code to the new code. 
+
+### 4. `WEBINY_ELASTICSEARCH_INDEX_LOCALE` Environment Variable
 
 <Alert type={"info"}>
 
@@ -73,7 +99,7 @@ WEBINY_ELASTICSEARCH_INDEX_LOCALE=false
 
 </Alert>
 
-### 4. Deploy Your Project
+### 5. Deploy Your Project
 
 Proceed by redeploying your Webiny project:
 
