--- a/src/docs/5.38.x/enterprise/aacl/folder-level-permissions.mdx
+++ b/src/docs/5.38.x/enterprise/aacl/folder-level-permissions.mdx
@@ -3,10 +3,10 @@ title: Folder Level Permissions
 description: Learn about the Folder Level Permissions feature and how to use it.
 ---
 
-import aaclTeams from "./assets/aacl-teams.png";
-import aaclTeamsMenu from "./assets/aacl-teams-menu.png";
-import aaclTeamsAutocomplete from "./assets/aacl-teams-autocomplete.png";
 import flp from "./assets/flp.png";
+import flpManagePermissionsDialog from "./assets/flp-manage-permissions-dialog.png";
+import flpManagePermissionsOption from "./assets/flp-manage-permssions-option.png";
+import flpIconOnFolder from "./assets/flp-icon-on-folder.png";
 
 <CanIUseThis enterprise={true} since={"5.38.0"} />
 
@@ -31,36 +31,50 @@ With this feature, users can define access permissions on a folder level. More s
 
 Folder Level Permissions can be used across the three main Webiny applications: **Headless CMS**, **File Manager**, and **Page Builder**.
 
-## Enabling Teams and Feature Overview
+## Enabling Folder Level Permissions and Feature Overview
 
-For Webiny Enterprise users, apart from [linking their Webiny project](/docs/wcp/link-a-project) with Webiny Control Panel (WCP), there are no additional steps required to enable Teams.
+For Webiny Enterprise users, apart from [linking their Webiny project](/docs/wcp/link-a-project) with Webiny Control Panel (WCP), there are no additional steps required to enable Folder Level Permissions.
 
-Once linked, Folder Level Permissions will be automatically enabled and the module can be accessed from the main menu:
+Once linked, Folder Level Permissions will be automatically enabled and full access users can start using it all three applications: **Headless CMS**, **File Manager**, and **Page Builder**.
 
-<Image src={aaclTeamsMenu} title={"Teams Available From the Main Menu"} />
+<Alert type="info">
 
-Via the Teams module, users can create new teams that consist of one or more security roles.
+  Once enabled, note that only users that have the **Full Access** security role assigned can use the Folder Level Permissions feature. They are the ones that can then assign new owners to folders that can then manage permissions for other users.
 
-<Image src={aaclTeams} title={"Creating a New Team"} />
+</Alert>
 
-Once a team is created, users can assign it to one or more users. This can be done by editing the user and selecting the team via the Team field.
+For example, if we were to open the Page Builder app, right-clicking on a folder in the tree on the left will open a context menu, now with the **Manage Permissions** option included:
 
-<Image src={aaclTeamsAutocomplete} title={"Assigning Admin Users To Teams"} />
+<Image src={flpManagePermissionsOption} alt={"Manage Permissions Option"}  />
+
+Clicking on the **Manage Permissions** option will open a dialog where we can assign users and teams to the folder, and also define their permissions:
+
+<Image src={flpManagePermissionsDialog} alt={"Manage Permissions Dialog"}  />
+
+Once permissions are assigned, the icon of the folder changes, indicating that the folder has permissions assigned:
+
+<Image src={flpIconOnFolder} alt={"Folder Level Permissions Assigned"}  />
 
 ## FAQ
 
-### Can I Assign Multiple Security Roles To a User Without The Teams Enabled ?
+### When I Enable Folder Level Permissions, Will All My Existing Users Be Able To Use It?
 
-No, you can't assign multiple security roles to a user without the Teams enabled.
+No. Only users that have the **Full Access** security role assigned can use the Folder Level Permissions feature.
 
-### Can I Assign Multiple Roles To a Team?
+### In terms of access for other users, will anything change once I enable Folder Level Permissions?
 
-Yes, you can assign multiple roles to a team.
+No. The only thing that will change is that users that have the **Full Access** security role assigned will be able to use the Folder Level Permissions feature.
 
-### Can I Assign Users To Multiple Teams?
+But in terms of what users can access, nothing will change. For example, if a user has access to a specific folder, they will still have access to it after enabling Folder Level Permissions. Only by using the Folder Level Permissions feature and setting permissions on a folder level, can you change what users can access.
 
-No, users can only be assigned to a single team.
+### Can I Use Folder Level Permissions With The Teams Feature?
 
-### Can I use Teams with the Open Source or Business tier?
+Yes. You can assign teams to folders, and then define their permissions.
 
-No. Teams are only available with the Enterprise tier.
+### Can I assign permissions to the root folder?
+
+No. The root folder is always accessible to all users. 
+
+A workaround for this is to create a new folder, and then move all the content from the root folder to the new folder. Then, you can assign permissions to the new folder.
+
+
