feat: add FLP overview article

--- a/src/docs/5.38.x/enterprise/aacl/folder-level-permissions.mdx
+++ b/src/docs/5.38.x/enterprise/aacl/folder-level-permissions.mdx
@@ -29,7 +29,7 @@ With this feature, users can define access permissions on a folder level. More s
 - **Editor** - users can view and modify content
 - **Owner** - users can edit and manage content permissions
 
-Folder Level Permissions can be used across the three main Webiny applications: **Headless CMS**, **File Manager**, and **Page Builder**.
+Folder Level Permissions can be used across the three main Webiny applications: **Headless CMS** (content entries), **File Manager** (files), and **Page Builder** (pages).
 
 ## Enabling Folder Level Permissions and Feature Overview
 
@@ -77,4 +77,8 @@ No. The root folder is always accessible to all users.
 
 A workaround for this is to create a new folder, and then move all the content from the root folder to the new folder. Then, you can assign permissions to the new folder.
 
+### How does Folder Level Permissions feature work with existing security layer?
 
+Folder Level Permissions feature is an extension of the existing [security layer](/docs/enterprise/aacl/introduction#the-three-tiers-of-webiny-s-security-layer). It does not replace it.
+
+This means that existing security roles and security teams are still the first thing that is checked when a user tries to access a resource. For example, if user's security role doesn't grant access to Page Builder, then the user will not be able to access Page Builder, even if they have permissions assigned to a folder in Page Builder.
