feat: audit logs

--- a/src/docs/shared/release-notes/5.38.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.0/changelog.mdx
@@ -4,7 +4,13 @@ title: Webiny 5.38.0 Changelog
 description: See what's new in Webiny version 5.38.0.
 ---
 
-import { Gallery } from "@/components/Image";
+
+
+
+
+
+
+import {Gallery} from "@/components/Image";
 import flp from "./assets/flp.png";
 import watchCmd from "./assets/watch-cmd.png";
 import blockPreview from "./assets/blocks-preview.png";
@@ -18,6 +24,7 @@ import bulkActionsHcms from "./assets/bulk-actions-hcms.png"
 import bulkActionsPb from "./assets/bulk-actions-pb.png"
 import bulkActionsFm from "./assets/bulk-actions-fm.png"
 import preDefinedBlocks from "./assets/pre-defined-blocks.png"
+import auditLogs from "./assets/audit-logs.png"
 
 <GithubRelease version={"5.38.0"} />
 
@@ -92,9 +99,13 @@ This feature promises to simplify user interaction with entries, streamline work
 
 <Image src={advancedSearchFilters} alt={"Headless CMS Advanced Search Filter Builder"} />
 
-### ✍️ Audit Logs
+## Audit Logs ([#3454](https://github.com/webiny/webiny-js/pull/3454) [#3580](https://github.com/webiny/webiny-js/pull/3580) [#3644](https://github.com/webiny/webiny-js/pull/3644) [#3645](https://github.com/webiny/webiny-js/pull/3645))
 
-✍️
+With this release, for our enterprise users, we are introducing Audit Logs.
+
+In the Audit Logs our enterprise users will be able to track what exactly was done, who did it and when. Audit Logs contain the values of the changed data, so it is possible to, manually, roll back to the previous state of the data.
+
+<Image src={auditLogs} alt={"Audit Logs"}/>
 
 ## Page Builder
 
