fix: update audit logs text

--- a/src/docs/shared/release-notes/5.38.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.0/changelog.mdx
@@ -103,7 +103,8 @@ This feature promises to simplify user interaction with entries, streamline work
 
 With this release, for our enterprise users, we are introducing Audit Logs.
 
-In the Audit Logs our enterprise users will be able to track what exactly was done, who did it and when. Audit Logs contain the values of the changed data, so it is possible to, manually, roll back to the previous state of the data.
+In the Audit Logs our enterprise users can track what exactly was done, who did it and when.
+Audit Logs contain the changed record values so that users can easily identify which parts of the record have been changed.
 
 <Image src={auditLogs} alt={"Audit Logs"}/>
 
