--- a/src/docs/shared/release-notes/5.38.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.0/changelog.mdx
@@ -217,3 +217,13 @@ We've revamped the output for the [`webiny watch`](/docs/{version}/core-developm
 When compared to the previous, the new output is much more compact and easier to read. Instead of using three panes to display the build, deploy, and application runtime logs, the command is now printing all logs directly into the terminal.
 
 Furthermore, the deployment logs have been simplified, only showing basic information about the deployment process. Only in case of an error, the full deployment logs will be printed to the user.
+
+### Node.js v16 ([#3504](https://github.com/webiny/webiny-js/pull/3504))
+
+Because of the end of life for the Node.js v14, we have upgraded version of the Node.js for the system to the v16.
+AWS Lambdas will get deployed, with the usage of the new version, on your first deploy after the system upgrade.
+
+Note that, if you have used [puppeteer-core](https://www.npmjs.com/package/puppeteer-core) in your project, the version of it has also changed, so update the package and update your code accordingly.
+
+This is a step towards the Node.js v18, which will probably go out with the next version of Webiny.
+
