feat: partial saving of cms entry

--- a/src/docs/shared/release-notes/5.38.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.0/changelog.mdx
@@ -10,6 +10,7 @@ description: See what's new in Webiny version 5.38.0.
 
 
 
+
 import {Gallery} from "@/components/Image";
 import flp from "./assets/flp.png";
 import watchCmd from "./assets/watch-cmd.png";
@@ -98,6 +99,16 @@ Moreover, users can save and manage their search filters, making it easier to ac
 This feature promises to simplify user interaction with entries, streamline workflows, and optimise content management within the application.
 
 <Image src={advancedSearchFilters} alt={"Headless CMS Advanced Search Filter Builder"} />
+
+### Partial Saving of the CMS Entry ([#3579](https://github.com/webiny/webiny-js/pull/3579))
+
+With this release, we are introducing partial saving of the CMS entry. This means that users can save drafts that are not fully populated.
+
+For example, if a user has a required field, they can save the entry without filling in the required field. This is particularly useful for large entries, where the user may want to save the entry several times during the writing process, without having to fill in all the required fields.
+This is done by skipping the required validator if the field is not populated. As soon as field is populated, all other validators will be executed on the field.
+
+The required validator is enforced when the user attempts to publish the entry, so there is no way to publish an entry without filling in all the required fields.
+
 
 ## Audit Logs ([#3454](https://github.com/webiny/webiny-js/pull/3454) [#3580](https://github.com/webiny/webiny-js/pull/3580) [#3644](https://github.com/webiny/webiny-js/pull/3644) [#3645](https://github.com/webiny/webiny-js/pull/3645))
 
