fix: polish changelog

--- a/src/docs/shared/release-notes/5.38.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.0/changelog.mdx
@@ -3,14 +3,6 @@ id: changelog
 title: Webiny 5.38.0 Changelog
 description: See what's new in Webiny version 5.38.0.
 ---
-
-
-
-
-
-
-
-
 import {Gallery} from "@/components/Image";
 import flp from "./assets/flp.png";
 import watchCmd from "./assets/watch-cmd.png";
@@ -37,7 +29,7 @@ Used only with [Amazon DynamoDB + Amazon ElasticSearch](http://docs:8000/docs/ar
 
 Today, there is really no reason to not set this to `true`, so we've decided to hide this environment variable altogether, and always include the locale code in the index name.
 
-We're aware that this might cause some issues for existing projects, so we've added [a couple of notes](/docs/release-notes/5.38.0/upgrade-guide#3-webiny-elasticsearch-index-locale-environment-variable) in the migration guide to help you with the migration process.
+We're aware that this might cause issues for existing projects, so we've added [a couple of notes](/docs/release-notes/5.38.0/upgrade-guide#4-webiny-elasticsearch-index-locale-environment-variable) in the migration guide to help you with the migration process.
 
 ## Security
 
@@ -61,7 +53,16 @@ Once defined, besides the selected folder, the access permissions are also inher
 
 We believe that this feature will be especially useful for teams that are working on large projects, where the content is organized into multiple folders, and where the content is managed by multiple users.
 
-To learn more, please refer to the newly added [Folder Level Permissions](/docs/key-topics/security/folder-level-permissions) article.
+To learn more, please refer to the newly added [Folder Level Permissions](/docs/enterprise/aacl/folder-level-permissions) article.
+
+### Audit Logs ([#3454](https://github.com/webiny/webiny-js/pull/3454) [#3580](https://github.com/webiny/webiny-js/pull/3580) [#3644](https://github.com/webiny/webiny-js/pull/3644) [#3645](https://github.com/webiny/webiny-js/pull/3645))
+
+With this release, for our enterprise users, we are introducing Audit Logs.
+
+In the Audit Logs our enterprise users can track what exactly was done, who did it and when.
+Audit Logs contain the changed record values so that users can easily identify which parts of the record have been changed.
+
+<Image src={auditLogs} alt={"Audit Logs"}/>
 
 ## Headless CMS
 
@@ -108,16 +109,6 @@ For example, if a user has a required field, they can save the entry without fil
 This is done by skipping the required validator if the field is not populated. As soon as field is populated, all other validators will be executed on the field.
 
 The required validator is enforced when the user attempts to publish the entry, so there is no way to publish an entry without filling in all the required fields.
-
-
-## Audit Logs ([#3454](https://github.com/webiny/webiny-js/pull/3454) [#3580](https://github.com/webiny/webiny-js/pull/3580) [#3644](https://github.com/webiny/webiny-js/pull/3644) [#3645](https://github.com/webiny/webiny-js/pull/3645))
-
-With this release, for our enterprise users, we are introducing Audit Logs.
-
-In the Audit Logs our enterprise users can track what exactly was done, who did it and when.
-Audit Logs contain the changed record values so that users can easily identify which parts of the record have been changed.
-
-<Image src={auditLogs} alt={"Audit Logs"}/>
 
 ## Page Builder
 
