fix: add "Multiple Files Selection Using the Shift Key"

--- a/src/docs/shared/release-notes/5.38.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.0/changelog.mdx
@@ -18,6 +18,7 @@ import bulkActionsPb from "./assets/bulk-actions-pb.png"
 import bulkActionsFm from "./assets/bulk-actions-fm.png"
 import preDefinedBlocks from "./assets/pre-defined-blocks.png"
 import auditLogs from "./assets/audit-logs.png"
+import fnShiftSelect from "./assets/fm-shift-select.mp4"
 
 <GithubRelease version={"5.38.0"} />
 
@@ -159,6 +160,16 @@ In terms of manual steps, note that you will still need to update a couple of fo
 
 [//]: # ()
 [//]: # (Note that, at the moment, we do not provide a migration path from Amazon Elasticsearch to Amazon OpenSearch for existing projects. Drop us a message in our [Community Slack]&#40;https://www.webiny.com/slack&#41; if this is something you'd like to see in the future.)
+
+## File Manager
+
+### Multiple Files Selection Using the Shift Key ([#3675](https://github.com/webiny/webiny-js/pull/3657))
+
+Using the Shift key, users can now select multiple files while browsing their files. 
+
+<Video src={fnShiftSelect} controls={false} />
+
+The above video demonstrates the feature when using the grid layout, but note that the same behaviour is also available when using the list layout.
 
 ## Bulk actions
 
