chore: update content

--- a/src/docs/shared/release-notes/5.38.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.1/changelog.mdx
@@ -9,7 +9,7 @@ description: See what's new in Webiny version 5.38.1.
   This is a low severity security patch release!
 </Alert>
 
-## Add Execution Context Scoping to `withoutAuthorization` Method Call ([#3714](https://github.com/webiny/webiny-js/pull/3714))
+## `withoutAuthorization` Execution Context Scoping ([#3714](https://github.com/webiny/webiny-js/pull/3714))
 
 ### Problem Description
 
@@ -26,4 +26,4 @@ From your system security standpoint, this is a low severity issue, because this
 
 ### The Solution
 
-The solution uses the async context tracking feature of Nodejs: https://nodejs.org/api/async_context.html#class-asynclocalstorage. This makes it possible for us to track the state of authorization on the execution context level, and not the entire request. So now, even if one part of the code execution temporarily disables authorization, all parallel execution paths would still have the authorization enabled.
+The solution uses the [async context tracking](https://nodejs.org/api/async_context.html) feature of Nodejs. This makes it possible for us to track the state of authorization on the execution context level, and not the entire request. So now, even if one part of the code execution temporarily disables authorization, all parallel execution paths would still have the authorization enabled.
