--- a/src/docs/shared/release-notes/5.38.1/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.38.1/upgrade-guide.mdx
@@ -1,6 +1,6 @@
 ---
 title: Upgrade from 5.37.x to 5.38.1
-description: Learn how to upgrade Webiny from 5.37.x to 5.38.1.
+description: Learn how to upgrade Webiny from 5.37.0 to 5.38.1.
 ---
 
 import { Alert } from "@/components/Alert";
@@ -8,7 +8,7 @@ import { AdditionalNotes } from "@/components/upgrade/AdditionalNotes";
 
 <Alert type="success" title="What you’ll learn">
 
-- how to upgrade Webiny from 5.36.x or 5.37.x to 5.38.1
+- how to upgrade Webiny from 5.37.0 to 5.38.1
 
 </Alert>
 
@@ -31,7 +31,7 @@ yarn up "@webiny/*@5.38.1"
 
 Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return **5.38.1**.
 
-### 5. Deploy Your Project
+### 2. Deploy Your Project
 
 Proceed by redeploying your Webiny project:
 
