--- a/src/docs/shared/release-notes/5.38.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.38.1/changelog.mdx
@@ -27,3 +27,23 @@ From your system security standpoint, this is a low severity issue, because this
 ### The Solution
 
 The solution uses the [async context tracking](https://nodejs.org/api/async_context.html) feature of Nodejs. This makes it possible for us to track the state of authorization on the execution context level, and not the entire request. So now, even if one part of the code execution temporarily disables authorization, all parallel execution paths would still have the authorization enabled.
+
+## Remove Deprecated Methods
+
+To make the patch described above work reliably, we had to finally remove methods `enableAuthorization()` and `disableAuthorization()` from the Security app. These methods have long been deprecated, since the introduction of `withoutAuthorization()` method, so this should not come as a surprise.
+
+Still, if your plugins used these two deprecated methods, you will be forced to upgrade the usage. Here's what you'll need to do:
+
+```ts Old Usage
+context.security.disableAuthorization();
+// Do something
+context.security.enableAuthorization();
+```
+
+This same code will now look like this:
+
+```ts New Usage
+context.security.withoutAuthorization(() => {
+  // Do something
+});
+```
